--- a/src/App.css
+++ b/src/App.css
@@ -449,6 +449,51 @@
     }
 }
 
+@media (max-width: 362px) {
+
+    .Img-container {
+        position: relative;
+        display: block;
+        width: 100%;
+    }
+
+    .Img-container img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+
+    .buttem {
+        margin-top: 10px;
+    }
+
+    .text-On-Img,
+    .text-On-Img1 {
+        position: absolute;
+        left: 20px;
+        color: black;
+        border-radius: 5px;
+        font-size: 14px;
+    }
+
+    .text-On-Img {
+        top: 40px;
+    }
+
+    .text-On-Img1 {
+        top: 70px;
+    }
+
+    .but-On-Img {
+        position: absolute;
+        left: 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        padding: 5px 10px;
+        font-size: 14px;
+    }
+}
 
 @media(max-width:480px) {
 
@@ -519,6 +564,15 @@
         border-radius: 5px;
     }
 
+    .but-On-Img {
+        position: absolute;
+        bottom: 35px;
+        left: 40px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
     .shipping-info li {
         width: 100%;
     }
@@ -526,6 +580,8 @@
     .footer {
         text-align: center;
     }
-}
 
-@media(max-width:768px) {}
+    .buttem {
+        margin-top: 10px;
+    }
+}
